stageleft_test/src/snapshots/stageleft_test__tests__crate_path_in_macro.snap
---
source: stageleft_test/src/lib.rs
assertion_line: 222
expression: "prettyplease::unparse(&file)"
---
fn main() {
    {
        use crate::__staged::__deps::*;
        use crate::__staged::tests::*;
        { assert!(crate::__staged::my_top_level_function()) }
    }
}
