stageleft_test/src/snapshots/stageleft_test__tests__splice_snapshot_fnmut2_borrow_mut.snap
---
source: stageleft_test/src/lib.rs
expression: "prettyplease::unparse(&file)"
---
fn main() {
    stageleft::runtime_support::fnmut2_borrow_mut_type_hint::<
        i32,
        i32,
        (),
    >({
        use crate::__staged::__deps::*;
        use crate::__staged::tests::*;
        { |state: &mut i32, item: i32| *state += item }
    })
}
