stageleft_test/src/snapshots/stageleft_test__tests__use_crate_path_in_test_module.snap
---
source: stageleft_test/src/lib.rs
assertion_line: 185
expression: "prettyplease::unparse(&file)"
---
fn main() {
    {
        use crate::__staged::__deps::*;
        use crate::__staged::tests::*;
        {
            {
                use crate::__staged::my_top_level_function as renamed_function;
                renamed_function()
            }
        }
    }
}
